# courses_app

backend/B_identity_service/: .env.development  .gitignore  Cargo.toml
backend/B_identity_service/src/: config.rs  cors.rs  error.rs  main.rs  openapi.rs  router.rs  state.rs
backend/B_identity_service/src/db/: postgres.rs
backend/B_identity_service/src/extract/: json.rs  mod.rs  multipart.rs  path.rs  query.rs  user_id.rs
backend/B_identity_service/src/models/entity/: common.rs  user.rs
backend/B_identity_service/src/models/repository/: user.rs
backend/B_identity_service/src/routes/: mod.rs
backend/B_identity_service/src/routes/dto/: auth.rs  common.rs
backend/B_identity_service/src/routes/endpoints/: auth.rs
backend/B_identity_service/src/utils/: jwt.rs
backend/migrations/postgres/: .env  README.md
backend/migrations/postgres/migrations/: 001_users.sql
docker/: .gitignore  docker-compose.yaml
docs/: Documentacion.md  skeleton.sql
