[package]
name = "identity_service"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }

axum = { version = "0.8.7", features = ["macros", "multipart", "tokio"] }

sea-orm = { version = "1.1.19", features = ["runtime-tokio", "sqlx-postgres"] }

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
bcrypt = "0.17.1"

chrono = "0.4.42"
dotenv = "0.15.0"
fs2 = "0.4.3"
futures = "0.3.31"
time = "0.3.44"
anyhow = "1.0.100"
once_cell = "1.21.3"
tower-http = { version = "0.6.8", features = ["cors"] }
strum = { version = "0.27.2", features = ["derive"] }
strum_macros = "0.27.2"
